objects/fferpcore__ProcessUserGroup__c.object
<CustomObject>
    <fields>
        <fullName>fferpcore__ProcessRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Run</label>
        <referenceTo>fferpcore__ProcessRun__c</referenceTo>
        <relationshipLabel>Process User Groups</relationshipLabel>
        <relationshipName>Process_User_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfErrors__c</fullName>
        <description>Total Number of Logs which have the status of Error.</description>
        <label>Total Number of Errors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfPending__c</fullName>
        <description>Total Number of Logs which have the status of Pending.</description>
        <label>Total Number of Pending</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfSuccesses__c</fullName>
        <description>Total Number of Logs which have the status of OK.</description>
        <label>Total Number of Successes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__UniqueIdentifier__c</fullName>
        <description>Unique Identifier for the Process User Group.</description>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that owns the Process User Group.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_User_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process User Group</label>
    <nameField>
        <displayFormat>PUG-{000000}</displayFormat>
        <label>Process User Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>